Services/MooMed/Kubernetes/MooMedWebProd.yaml
apiVersion: v1
kind: Service
metadata:
  name: moomed-frontendservice-service
spec:
  type: LoadBalancer
  selector:
    name: moomed-frontendservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moomed-frontendservice-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      name: moomed-frontendservice
  template:
    metadata:
      labels:
        name: moomed-frontendservice
    spec:
      containers:
      - name: moomed-frontendservice
        image: moomed.azurecr.io/frontendservice
        imagePullPolicy: Always 
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: acrimgpullsecret
