Services/MooMed/Kubernetes/MooMedWebIngress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: moomed-Ingress
  annotations:
